# calc-hw1

./: .gitmodules  CMakeLists.txt  README.md  calc.cpp  correct.txt  evaluate_postfix.cpp  sexpression.cpp  test.sh
lib/: CMakeLists.txt  ast.cpp  evaluate.cpp  parser.cpp  postfix.cpp  postfix.h  sexpr.cpp
